[gd_scene load_steps=7 format=3 uid="uid://dy2ni6g7d3awn"]

[ext_resource type="PackedScene" uid="uid://kffshbje5xw" path="res://girl_character.tscn" id="1_0e48y"]
[ext_resource type="Script" uid="uid://x4l4503bg4ib" path="res://node_2d.gd" id="1_0hol4"]
[ext_resource type="PackedScene" uid="uid://bucjmr5dt3ciy" path="res://menu.tscn" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://dkgkh7xvjyqcm" path="res://background2.jpg" id="3_epypp"]
[ext_resource type="PackedScene" uid="uid://dfsygn63tr50w" path="res://stats_ui.tscn" id="5_q6r6c"]
[ext_resource type="AudioStream" uid="uid://ba0cjrp0u1gpm" path="res://LEASE - 阿保剛 (online-audio-converter.com).ogg" id="6_kdubu"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_0hol4")

[node name="GirlCharacter" parent="." instance=ExtResource("1_0e48y")]
position = Vector2(356, 798)

[node name="Menu" parent="." instance=ExtResource("1_wtcfe")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 361.0
offset_top = 1326.0
offset_right = 361.0
offset_bottom = 1326.0
grow_horizontal = 1
grow_vertical = 1

[node name="Background" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(711.391, 638)
scale = Vector2(1.18525, 1.18525)
texture = ExtResource("3_epypp")

[node name="StatsUI" parent="." instance=ExtResource("5_q6r6c")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kdubu")
volume_db = -20.0
autoplay = true

[node name="SKAM" type="Button" parent="."]
offset_left = 266.0
offset_top = 1198.0
offset_right = 459.0
offset_bottom = 1261.0
theme_override_font_sizes/font_size = 40
text = "Трахнуть"

[connection signal="pressed" from="SKAM" to="." method="_on_skam_pressed"]
